fix: overlay CTA box due to contrast issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,8 @@ button:hover,
 .cta-content {
     margin: 0px 40px;
     border-radius: 10px;
-    background: url('../images/contact-background.webp') no-repeat center center/cover;
+    background: linear-gradient(rgba(19, 35, 20, 0.9), rgba(19, 35, 20, 0.6)),
+    url('../images/dog11.webp') no-repeat center center/cover;
     color: white;
     padding: 50px;
     text-align: center;
